<resources>
    <string name="app_name">早盟在线</string>
    <string name="retry">重试</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">请输入手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">分类</string>
    <string name="title_notifications">常用</string>
    <string name="title_activity_me">我的</string>
    <string name="section_format">Hello World from section: %1$d</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fast_search_goods">快速搜索商品</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="user_registration">用户注册</string>
    <string name="prompt_verification_code">输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="shop_info">店铺信息</string>
    <string name="shop_name">店铺名称</string>
    <string name="tt_shop_name">营业执照上的店铺名称</string>
    <string name="shop_type">主营类型</string>
    <string name="chose_type">请选择</string>
    <string name="location">所在区域</string>
    <string name="location_hint">请准确选择，确保货物能送达</string>
    <string name="address_hint">请写清门牌号，若有参照物请说明</string>
    <string name="detailed_address">详细地址</string>
    <string name="consignee">收货人</string>
    <string name="consignee_name">收货人姓名</string>
    <string name="consignee_phone">收货人电话</string>
    <string name="shop_photo">店铺照片</string>
    <string name="legal_person_photo">法人照片</string>
    <string name="coupon">优惠券</string>
    <string name="score">积分</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">全部订单</string>
    <string name="payment">待付款</string>
    <string name="receiving_goods">待收货</string>
    <string name="cancel">取消/售后</string>
    <string name="address">收货地址</string>
    <string name="feedback">意见反馈</string>
    <string name="customer_service">联系客服</string>
    <string name="setting">设置</string>
    <string name="commonly_used_list">常用列表</string>
    <string name="add_shop_car">添加购物车</string>
    <string name="zmyx">早盟优选</string>
    <string name="more">更多</string>
    <string name="shopping_cart">购物车</string>
    <string name="specification">选择规格</string>
    <string name="number">选择数量</string>
    <string name="OK">确定</string>
    <string name="logining">登录中...</string>
    <string name="search_history">搜索历史</string>
    <string name="delete">删除</string>
    <string name="select_all">全选</string>
    <string name="settlement">结算</string>
    <string name="total">合计：</string>
    <string name="freight">配送费</string>
    <string name="_0">0</string>
    <string name="add">➕</string>
    <string name="reduce">➖</string>
    <string name="goods_details">商品详情</string>
    <string name="describe_text">文字描述</string>
    <string name="image_show">图片展示</string>
    <string name="submit">提交审核</string>
    <string name="add_shop">添加新店铺</string>

</resources>
